Add patient section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,7 +41,7 @@
 <!-- About Us -->
 <section id="about" class="about-section">
   <div class="about-us">
-    <h2 class="about-title">about us</h2>
+    <h2 class="section-title">about us</h2>
     <p class="about-detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
   </div>
   <div class="about-column-wrapper">
@@ -91,46 +91,49 @@
 </section><!-- End of About us -->
 <!-- Patients -->
 <section id="patients" class="patient-section">
-  <!-- Left Patient -->
-  <div class="patient--left">
-    <div class="name-tag">
-      <span class="name">Asher</span>
-      <span class="type">Golden Retriever</span>
+  <h2 class="section-title">our patients</h2>
+  <div class="patient-wrapper">
+    <!-- Left Patient -->
+    <div class="patient--left">
+      <div class="name-tag">
+        <span class="name">Asher</span>
+        <span class="type">Golden Retriever</span>
+      </div>
+      <img class="patient-img--lg" src="./assets/img/gallery_lg.png" alt="Golden Retriever">
     </div>
-    <img class="patient-img--lg" src="./assets/img/gallery_lg.png" alt="Golden Retriever">
-  </div>
-  <!-- Right Patient -->
-  <div class="patient--right">
-    <div class="patient--top">
-      <div class="col--3">
-        <div class="name-tag">
-          <span class="name">Luke</span>
-          <span class="type">Shar Pei</span>
+    <!-- Right Patient -->
+    <div class="patient--right">
+      <div class="patient--top">
+        <div class="col--3">
+          <div class="name-tag">
+            <span class="name">Luke</span>
+            <span class="type">Shar Pei</span>
+          </div>
+          <img class="patient-img--lg" src="./assets/img/gallery_md1.png" alt="Shar Pei">
         </div>
-        <img class="patient-img--lg" src="./assets/img/gallery_md1.png" alt="Shar Pei">
+        <div class="col--1">
+          <div class="name-tag">
+            <span class="name">Mitch</span>
+            <span class="type">Bulldog</span>
+          </div>
+          <img class="patient-img--lg" src="./assets/img/gallery_sm1.png" alt="Bulldog">
+        </div>
       </div>
-      <div class="col--1">
-        <div class="name-tag">
-          <span class="name">Mitch</span>
-          <span class="type">Bulldog</span>
+      <div class="patient--bottom">
+        <div class="col--1">
+          <div class="name-tag">
+            <span class="name">Otis</span>
+            <span class="type">Corgi</span>
+          </div>
+          <img class="patient-img--lg" src="./assets/img/gallery_sm2.png" alt="Corgi">
         </div>
-        <img class="patient-img--lg" src="./assets/img/gallery_sm1.png" alt="Bulldog">
-      </div>
-    </div>
-    <div class="patient--bottom">
-      <div class="col--1">
-        <div class="name-tag">
-          <span class="name">Otis</span>
-          <span class="type">Corgi</span>
+        <div class="col--3">
+          <div class="name-tag">
+            <span class="name">Barney</span>
+            <span class="type">Labrador</span>
+          </div>
+          <img class="patient-img--lg" src="./assets/img/gallery_md2.png" alt="Labrador">
         </div>
-        <img class="patient-img--lg" src="./assets/img/gallery_sm2.png" alt="Corgi">
-      </div>
-      <div class="col--3">
-        <div class="name-tag">
-          <span class="name">Barney</span>
-          <span class="type">Labrador</span>
-        </div>
-        <img class="patient-img--lg" src="./assets/img/gallery_md2.png" alt="Labrador">
       </div>
     </div>
   </div>
