1. Update patients section with CSS Grid 2. Adjust professionals section animation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,48 +93,39 @@
 <section id="patients" class="patient-section">
   <h2 class="section-title">our patients</h2>
   <div class="patient-wrapper">
-    <!-- Left Patient -->
-    <div class="patient--left">
+    <div class="patient-1">
       <div class="name-tag">
         <span class="name">Asher</span>
         <span class="type">Golden Retriever</span>
       </div>
       <img class="patient-img--lg" src="./assets/img/gallery_lg.png" alt="Golden Retriever">
     </div>
-    <!-- Right Patient -->
-    <div class="patient--right">
-      <div class="patient--top">
-        <div class="col--3">
-          <div class="name-tag">
-            <span class="name">Luke</span>
-            <span class="type">Shar Pei</span>
-          </div>
-          <img class="patient-img--lg" src="./assets/img/gallery_md1.png" alt="Shar Pei">
-        </div>
-        <div class="col--1">
-          <div class="name-tag">
-            <span class="name">Mitch</span>
-            <span class="type">Bulldog</span>
-          </div>
-          <img class="patient-img--lg" src="./assets/img/gallery_sm1.png" alt="Bulldog">
-        </div>
+    <div class="patient-2">
+      <div class="name-tag">
+        <span class="name">Luke</span>
+        <span class="type">Shar Pei</span>
       </div>
-      <div class="patient--bottom">
-        <div class="col--1">
-          <div class="name-tag">
-            <span class="name">Otis</span>
-            <span class="type">Corgi</span>
-          </div>
-          <img class="patient-img--lg" src="./assets/img/gallery_sm2.png" alt="Corgi">
-        </div>
-        <div class="col--3">
-          <div class="name-tag">
-            <span class="name">Barney</span>
-            <span class="type">Labrador</span>
-          </div>
-          <img class="patient-img--lg" src="./assets/img/gallery_md2.png" alt="Labrador">
-        </div>
+      <img class="patient-img--lg" src="./assets/img/gallery_md1.png" alt="Shar Pei">
+    </div>
+    <div class="patient-3">
+      <div class="name-tag">
+        <span class="name">Mitch</span>
+        <span class="type">Bulldog</span>
       </div>
+      <img class="patient-img--lg" src="./assets/img/gallery_sm1.png" alt="Bulldog">
+    </div><div class="patient-4">
+      <div class="name-tag">
+        <span class="name">Otis</span>
+        <span class="type">Corgi</span>
+      </div>
+      <img class="patient-img--lg" src="./assets/img/gallery_sm2.png" alt="Corgi">
+    </div>
+    <div class="patient-5">
+      <div class="name-tag">
+        <span class="name">Barney</span>
+        <span class="type">Labrador</span>
+      </div>
+      <img class="patient-img--lg" src="./assets/img/gallery_md2.png" alt="Labrador">
     </div>
   </div>
 </section><!-- End of Patients -->
