--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -279,45 +279,97 @@
   margin-top: 10rem;
 }
 .patient-wrapper {
-  display: flex;
+  display: grid;
   margin: auto;
   margin-top: 40px;
   width: 100vw;
   height: 100vh;
   box-sizing: border-box;
-  .patient--left {
-    flex: 1;
-    height: 100%;
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  & > div {
     position: relative;
     display: flex;
+    img {
+      margin: auto;
+      width: auto;
+      height: 80%;
+      max-height: 80%;
+    }
+    .name-tag {
+      position: absolute;
+    }
   }
-  .patient--right {
-    flex: 2.5;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    .patient--top {
-      display: flex;
-      height: 50%;
-      flex: 1;
+  .patient-1 {
+    grid-column: 1/4;
+    grid-row: 1/last-line;
+    background: linear-gradient(to bottom, #EBECEE, #EDEEF0, #EFF0F2);
+    img {
+      margin-top: auto;
+      margin-bottom: 0;
     }
-    .patient--bottom {
-      display: flex;
-      height: 50%;
-      flex: 1;
-      width: 100%;
+    .name-tag {
+      left: calc(50% - 60px);
+      top: 5%;
     }
-    .col--3 {
-      flex: 2.5;
-      width: 100%;
-      height: 100%;
-      display: flex;
+  }
+  .patient-2 {
+    grid-column: 4/9;
+    grid-row: 1/4;
+    background: radial-gradient(#E8E9E9, #F0F2F4 55%, #e5e7ea 80%);
+    img {
+      height: 65%;
+      max-height: 65%;
+      margin-bottom: 2%;
+      margin-left: 5%;
     }
-    .col--1 {
-      flex: 1;
-      height: 100%;
-      width: 100%;
+    .name-tag {
+      right: 8%;
+      top: 30%;
+    }
+  }
+  .patient-3 {
+    grid-column: 9/12;
+    grid-row: 1/4;
+    background: radial-gradient(ellipse at center, #FFFFFF 20%, #EBECEE 100%);
+    img {
+      height: 95%;
+      max-height: 95%;
+      margin-bottom: 5%;
+    }
+    .name-tag {
+      left: 8%;
+      top: 25%;
+    }
+  }
+  .patient-4 {
+    grid-column: 4/7;
+    grid-row: 4/last-line;
+    background: radial-gradient(#F5F5F3, #EFEFEF);
+    img {
+      height: 95%;
+      max-height: 95%;
+      margin-bottom: 0;
+    }
+    .name-tag {
+      bottom: 10%;
+      left: 7%;
+    }
+  }
+  .patient-5 {
+    grid-column: 7/12;
+    grid-row: 4/last-line;
+    background: linear-gradient(to top, #dcdcdc, #efefef, #FBFBFB);
+    img {
+      width: 75%;
+      max-width: 75%;
+      height: auto;
+      max-height: unset;
+      margin-right: 5%;
+    }
+    .name-tag {
+      bottom: 40%;
+      left: 10%;
     }
   }
 }
@@ -333,92 +385,6 @@
   .type {
     color: #888;
     font-weight: 800;
-  }
-}
-// gallery_lg
-.patient--left {
-  position: relative;
-  background: linear-gradient(to bottom, #EBECEE, #EDEEF0, #EFF0F2);
-  .name-tag {
-    position: absolute;
-    top: 10%;
-    left: calc(50% - 60px);
-  }
-  img {
-    width: 80%;
-    margin: auto;
-    margin-top: auto;
-    margin-bottom: 0;
-  }
-}
-// gallery_md1
-.patient--top .col--3{
-  position: relative;
-  background: radial-gradient(#E8E9E9, #F0F2F4 55%, #e5e7ea 80%);
-  .name-tag {
-    position: absolute;
-    right: 14%;
-    top: 45%;
-  }
-  img {
-    height: 60%;
-    margin-bottom: 5%;
-    margin-right: auto;
-    margin-left: 8%;
-    margin-top: auto;
-  }
-}
-// gallery_sm1
-.patient--top .col--1 {
-  display: flex;
-  position: relative;
-  background: radial-gradient(ellipse at center, #FFFFFF 20%, #EBECEE 100%);
-  .name-tag {
-    position: absolute;
-    left: 4%;
-    top: 20%;
-  }
-  img {
-    height: 80%;
-    margin: auto;
-    margin-top: auto;
-    margin-bottom: 10%;
-  }
-}
-// gallery_sm2
-.patient--bottom .col--1 {
-  position: relative;
-  display: flex;
-  background: radial-gradient(#F5F5F3, #EFEFEF);
-  .name-tag {
-    position: absolute;
-    top: 50%;
-    left: 5%;
-  }
-  img {
-    width: 80%;
-    margin-right: 0;
-    margin-left: auto;
-    margin-top: auto;
-    margin-bottom: 10%;
-  }
-}
-// gallery_md2
-.patient--bottom .col--3 {
-  position: relative;
-  display: flex;
-  background: linear-gradient(to top, #dcdcdc, #efefef, #FBFBFB);
-  .name-tag {
-    position: absolute;
-    top: 40%;
-    left: 16%;
-  }
-  img {
-    height: 90%;
-    margin: auto;
-    margin-top: auto;
-    margin-bottom: 0;
-    margin-right: 10%;
   }
 }
 /*** Professional Section ***/
