Add contact section and social section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -168,4 +168,44 @@
   </div>
 </section><!-- End of Professionals -->
 <!-- Contact Us-->
-<section id="contact"></section><!-- End of Contact Us -->
+<section id="contact" class="contact-section">
+  <div class="contact-wrapper">
+    <div class="contact-box">
+      <span class="title">contact</span>
+      <div class="contact-row">
+        <input class="contact-ctrl" placeholder="Name" type="text">
+      </div>
+      <div class="contact-row">
+        <input class="contact-ctrl" placeholder="E-mail" type="email">
+      </div>
+      <div class="contact-row">
+        <textarea class="contact-ctrl" placeholder="Message" rows="4"></textarea>
+      </div>
+      <button type="button" class="contact-submit">submit</button>
+    </div>
+  </div>
+  <div class="contact-bg">
+    <img src="./assets/img/dog_btm.png" alt="dog">
+  </div>
+</section><!-- End of Contact Us -->
+<!-- Social Section -->
+<section class="social-section">
+  <div class="social-wrapper">
+    <a class="social-link" target="_blank" href="https://github.com/chen1223">
+      <figure class="social-icon-wrapper">
+        <fa-icon class="social-icon"[icon]="['fab', 'github-alt']"></fa-icon>
+      </figure>
+    </a>
+    <a class="social-link" target="_blank" href="https://www.facebook.com/hanwei1223">
+      <figure class="social-icon-wrapper">
+        <fa-icon class="social-icon"[icon]="['fab', 'facebook-f']"></fa-icon>
+      </figure>
+    </a>
+    <a class="social-link" target="_blank" href="https://www.pinterest.com/billchen353/">
+      <figure class="social-icon-wrapper">
+        <fa-icon class="social-icon"[icon]="['fab', 'pinterest-p']"></fa-icon>
+      </figure>
+    </a>
+    <a class="credit" target="_blank" href="https://www.behance.net/gallery/29757805/Landing-page-Aldridge">Designed by Christina Vlastiuk</a>
+  </div>
+</section><!-- End of Social  -->
