Update social links

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -196,14 +196,14 @@
         <fa-icon class="social-icon"[icon]="['fab', 'github-alt']"></fa-icon>
       </figure>
     </a>
+    <a class="social-link" target="_blank" href="https://codepen.io/chen1223">
+      <figure class="social-icon-wrapper">
+        <fa-icon class="social-icon"[icon]="['fab', 'codepen']"></fa-icon>
+      </figure>
+    </a>
     <a class="social-link" target="_blank" href="https://www.facebook.com/hanwei1223">
       <figure class="social-icon-wrapper">
         <fa-icon class="social-icon"[icon]="['fab', 'facebook-f']"></fa-icon>
-      </figure>
-    </a>
-    <a class="social-link" target="_blank" href="https://www.pinterest.com/billchen353/">
-      <figure class="social-icon-wrapper">
-        <fa-icon class="social-icon"[icon]="['fab', 'pinterest-p']"></fa-icon>
       </figure>
     </a>
     <a class="credit" target="_blank" href="https://www.behance.net/gallery/29757805/Landing-page-Aldridge">Designed by Christina Vlastiuk</a>
