Update social links

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -201,9 +201,9 @@
         <fa-icon class="social-icon"[icon]="['fab', 'codepen']"></fa-icon>
       </figure>
     </a>
-    <a class="social-link" target="_blank" href="https://www.facebook.com/hanwei1223">
+    <a class="social-link" target="_blank" href="https://www.linkedin.com/in/han-wei-chen">
       <figure class="social-icon-wrapper">
-        <fa-icon class="social-icon"[icon]="['fab', 'facebook-f']"></fa-icon>
+        <fa-icon class="social-icon"[icon]="['fab', 'linkedin-in']"></fa-icon>
       </figure>
     </a>
     <a class="credit" target="_blank" href="https://www.behance.net/gallery/29757805/Landing-page-Aldridge">Designed by Christina Vlastiuk</a>
